# lazy-table

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: tox.yml
examples/: euler_vdp.py  ode.py
src/lazy_table/: __init__.py  _lazy_table.py
src/lazy_table/artists/: __init__.py  _artist.py  _console.py
