[metadata]
name = lazy-table
version = 0.1.0
author = Parsiad Azimzadeh
author_email = parsiad.azimzadeh@gmail.com
description = A python-tabulate wrapper for producing tables from generators
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/parsiad/lazy-table
project_urls =
    Bug Tracker = https://github.com/parsiad/lazy-table/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    tabulate
    tqdm
package_dir =
    = src
packages = find:
python_requires = >= 3.6

[options.packages.find]
where = src
